adding level generating and remaking text complexity calculation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 DATABASE_URL="postgresql+asyncpg://postgres:root@localhost:5432/crossword"
-CROSSMAKER_BASE_URL="https://crossmaker.ru/api/v1/"
+CROSSMAKER_BASE_URL="https://crossmaker.ru"
